# capitalcom-cli

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  homebrew-bump.yml  release.yml
capital_cli/: __init__.py  __main__.py
capital_cli/cli/: __init__.py  account_cmds.py  app.py  context.py  doctor_cmds.py  live_guard.py  market_cmds.py  output.py  runner.py  session_cmds.py  stream_cmds.py  trade_cmds.py  watchlist_cmds.py
capital_cli/core/: __init__.py  audit.py  config.py  errors.py  http_client.py  models.py  rate_limit.py  risk.py  session.py  state.py  utils.py  websocket_client.py
capital_cli/sdk/: __init__.py  app.py  config.py  risk_policy.py
capital_cli/services/: __init__.py  accounts.py  confirmations.py  markets.py  streaming.py  trading.py  watchlists.py
docs/: CLI.md  api-coverage.md  awesome-submission.md  coverage-badge.json  distribution.md  getting-started.md  good-first-issues.md  scripting.md  sdk.md  troubleshooting.md  use-cases.md
tests/: conftest.py  test_account_cmds.py  test_app.py  test_audit.py  test_build_broker_request.py  test_cli_usage_errors.py  test_config_errors.py  test_core_port.py  test_coverage_doc_in_sync.py  test_credential_cmd.py  test_doctor.py  test_errors.py  test_global_flag_hoist.py  test_http_client.py  test_init_state_singletons.py  test_live_guard.py  test_market_cmds.py  test_output.py  test_output_color.py  test_output_plain.py  test_packaging_metadata.py  test_redaction.py  test_risk.py  test_runner.py  test_session_cmds.py  test_session_persistence.py  test_session_reads.py  test_state.py  test_stream_cmds.py  test_trade_cmds.py  test_trade_limit.py  test_tz_datetimes.py  test_utils.py  test_version.py  test_watchlist_cmds.py  test_websocket_parsing.py
tests/e2e/: _helpers.py  conftest.py  endpoints.py  test_cli_negative_e2e.py  test_cli_positive_gaps_e2e.py  test_coverage_registry.py  test_demo_e2e.py  test_sdk_e2e.py  test_sdk_negative_e2e.py  test_sdk_positive_gaps_e2e.py
tests/sdk/: test_facade.py
tests/services/: test_accounts.py  test_confirmations.py  test_markets.py  test_package.py  test_streaming.py  test_trading.py  test_watchlists.py
tools/: render_coverage.py
