[project]
name = "capitalcom-cli"
dynamic = ["version"]
description = "Unofficial command-line client for the Capital.com Open API"
authors = [{name = "Simon Tarara"}]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
keywords = [
    "capital.com",
    "trading",
    "cfd",
    "broker",
    "fintech",
    "market-data",
    "cli",
    "sdk",
    "async",
    "websocket",
    "finance",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Utilities",
]

dependencies = [
    "typer>=0.12.0",
    "click>=8.0",
    "rich>=13.7.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "build>=1.2.0",
]

[project.scripts]
capctl = "capital_cli.cli.app:run_cli"

[project.urls]
Homepage = "https://github.com/SimonTarara62/capitalcom-cli"
Documentation = "https://github.com/SimonTarara62/capitalcom-cli#readme"
Changelog = "https://github.com/SimonTarara62/capitalcom-cli/blob/main/CHANGELOG.md"
Source = "https://github.com/SimonTarara62/capitalcom-cli"
Issues = "https://github.com/SimonTarara62/capitalcom-cli/issues"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "capital_cli",
    "capital_cli.core",
    "capital_cli.cli",
    "capital_cli.services",
    "capital_cli.sdk",
]

[tool.setuptools.dynamic]
version = {attr = "capital_cli.__version__"}

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008"]  # B008: Typer uses calls in defaults

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["--strict-markers", "-m", "not e2e"]
markers = [
    "e2e: end-to-end tests against the real Capital.com demo API (opt-in: CAPCTL_E2E=1, run with -m e2e)",
]
